fixed elements overlapping when window made smaller, haven't figured out how to make accordion headers take up the full available window space between the left and right sections.

--- a/src/index.css
+++ b/src/index.css
@@ -55,14 +55,11 @@ body {
   font-family: "Roboto-Medium";
   font-size: 16px;
   scrollbar-gutter: stable;
-  /* min-height: 1000px; */
   background-color: var(--n800);
 }
 
 html {
-  width: 1900px;
   height: 100%;
-  min-width: 1000px;
 }
 
 /*text settings general*/
@@ -123,7 +120,6 @@ button:disabled {
   background-color: var(--n600);
 }
 
-
 /* LEFT SIDE OF PAGE 
 
 GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
@@ -138,12 +134,12 @@ GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
   margin-top: 0px;
 }
 .left-panel > .content {
-  display:flex;
+  display: flex;
   flex-direction: column;
   flex-shrink: 1;
   top: 0;
   padding-top: 20px;
-  width: 100%
+  width: 100%;
 }
 
 /*NEW BUTTON*/
@@ -169,15 +165,14 @@ GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 685px;
   height: 500px;
-  max-height: 90vh; 
-  overflow-y: auto;
-
+  max-height: 90vh;
+  overflow-y: scroll;
   p {
     color: white;
     margin: auto;
     font-family: "Roboto";
     font-size: 36px;
-  font-weight: bold;
+    font-weight: bold;
   }
 }
 
@@ -187,12 +182,11 @@ GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
 }
 
 .details.active {
-  display:block;
+  display: block;
 }
 
 .toggle {
   cursor: pointer;
-
 }
 
 .OpenModalOnPageContent {
@@ -200,41 +194,34 @@ GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
   margin: 0 auto;
   padding: 20px;
   border-radius: 8px;
-  
+
   body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     padding: 20px;
-  }   
+  }
 
   ul {
-      list-style-type: none;
-      padding: 0;
+    list-style-type: none;
+    padding: 0;
   }
 
   li {
-      background-color: #4CAF50;
-      color: white;
-      padding: 8px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      width: 100%;
+    background-color: #4caf50;
+    color: white;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    width: 100%;
   }
 }
-
-
-
-
-
-
-
 
 .rulesetObject {
   padding: 15px;
 }
 
-.rulesetOnPageModalContent h4{
-  color:rgb(255, 255, 255)
+.rulesetOnPageModalContent h4 {
+  color: rgb(255, 255, 255);
 }
 
 .rulesetOnPageModalContent select {
@@ -249,7 +236,7 @@ GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
   border-radius: 15px;
   position: relative;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: 820px;
+  width: 500px;
   height: 440px;
 
   p {
@@ -257,19 +244,15 @@ GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
     margin: auto;
     font-family: "Roboto";
     font-size: 36px;
-  font-weight: bold;
-
+    font-weight: bold;
   }
 }
-
-
-
 
 .ruleset-close-button {
   position: absolute;
   top: 2%;
-  right: 1.2%;
-  width: 8%;
+  right: 2%;
+  width: 18%;
   height: 10%;
   background: solid;
   border: none;
@@ -280,8 +263,8 @@ GROUPING BY PAGE SIDES. DO NOT DELETE BETWEEN THIS AND THE LINE THAT SAYS
 .ruleset-save-button {
   position: absolute;
   top: 85%;
-  right: 1.2%;
-  width: 20%;
+  right: 2%;
+  width: 18%;
   height: 10%;
   background: solid;
   border: none;
@@ -426,7 +409,7 @@ button.delete {
 }
 
 /*makes help and search horizontal*/
-.helpSearch{
+.helpSearch {
   height: 60px;
   max-width: 300px;
   margin: 0px;
@@ -496,7 +479,6 @@ button.delete {
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  
 }
 
 .help-page-modal-content {
@@ -508,13 +490,13 @@ button.delete {
   width: 1060px;
   height: 1000px;
   text-align: center;
-  
-  h1{
+
+  h1 {
     color: var(--c100);
     padding: 20px 0px 50px 0px;
     font-size: 60px;
   }
-  h2{
+  h2 {
     color: var(--c100);
     padding: 20px 0px 20px 0px;
     font-size: 40px;
@@ -527,7 +509,6 @@ button.delete {
     font-family: "Roboto";
     font-size: 30px;
     font-weight: bold;
-
   }
 }
 
@@ -535,7 +516,7 @@ button.delete {
   position: absolute;
   top: 85%;
   right: 1%;
-  width:20%;
+  width: 20%;
   height: 10%;
   background: solid;
   border: none;
@@ -547,17 +528,15 @@ button.delete {
 .redact,
 .compare,
 .templates-manager {
-  display: grid;
-  
+  display: flex;
+
   flex-direction: row;
   justify-content: space-between;
   width: auto;
-  grid-template-columns: 18% 60% auto;
+  grid-template-columns: 18% auto 18;
 }
 
-
 /* REDACT MENU: R/M Preview Element */
-
 
 .filters_preview_modal label {
   display: flex;
@@ -573,7 +552,7 @@ button.delete {
 .preferences_preview_modal {
   width: 100%;
   font-size: 18px;
-  max-height: 300px;
+  height: auto;
 }
 
 .preferences-div input[type="text"] {
@@ -622,7 +601,7 @@ button.delete {
 }
 
 .filters-div {
-  height: 400px;
+  height: auto;
   margin: 15px;
 }
 
@@ -675,10 +654,9 @@ button.delete {
   margin-right: 10px;
 }
 
-
 /*Redact, Modify, Preference, Filters Divs CSS*/
 .redact-div,
-.modify-div, 
+.modify-div,
 .preferences_preview_modal,
 .filters_preview_modal {
   margin: 10px 10px 0px 0px;
@@ -699,7 +677,7 @@ button.delete {
 /*RULESET ON PAGE CSS*/
 /* Ruleset Modal */
 .ruleset-modal {
-  max-width: 1000px;
+  /* max-width: 1000px; */
   max-height: 500px;
 }
 
@@ -714,7 +692,6 @@ button.delete {
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  
 }
 
 .open-close-button {
@@ -729,9 +706,8 @@ button.delete {
   cursor: pointer;
 }
 
-.openPageModalContent h4{
-  color:rgb(255, 255, 255)
-
+.openPageModalContent h4 {
+  color: rgb(255, 255, 255);
 }
 
 .openOnPageModalContent select {
@@ -741,11 +717,6 @@ button.delete {
 }
 
 /*LEFT SIDE DONE DO NOT DELETE ABOVE THIS LINE*/
-
-
-
-
-
 
 /*MIDDLE PAGE CONTENT*/
 .nitf-headers {
@@ -763,10 +734,11 @@ button.delete {
   text-align: center;
 }
 /*Traingle styling*/
-.accordion span, .accordion-open span {
+.accordion span,
+.accordion-open span {
   font-size: 27px;
   color: #c9c9c9;
-  display:inline-block;
+  display: inline-block;
   margin: 0 auto;
 }
 .accordion-open span {
@@ -774,7 +746,8 @@ button.delete {
 }
 
 /* Add a background color to the button when you move the mouse over it (hover) */
-.accordion:hover, .accordion-open:hover {
+.accordion:hover,
+.accordion-open:hover {
   background-color: var(--c100);
 }
 .accordion-open {
@@ -784,7 +757,7 @@ button.delete {
   transition: 0.2s;
   top: 0;
   position: -webkit-sticky;
-  position:sticky;
+  position: sticky;
   background-color: var(--p700);
   z-index: 0;
 }
@@ -842,7 +815,7 @@ button.delete {
   opacity: 0;
 }
 
-.field-row  div {
+.field-row div {
   margin-left: 10px;
 }
 
@@ -878,7 +851,8 @@ button.delete {
   transition: max-height 50s ease;
 }
 
-.tre-fields-list > .field-row, .tre-panel > .field-header {
+.tre-fields-list > .field-row,
+.tre-panel > .field-header {
   padding-left: 10px;
 }
 
@@ -944,7 +918,7 @@ button.delete {
   width: 100%;
   color: white;
   flex-shrink: 1;
-  top:5px;
+  top: 5px;
 }
 
 /*Redact, Modify, Preference, Filters Divs CSS*/
@@ -967,18 +941,13 @@ button.delete {
   overflow-y: auto;
 }
 /*arrows for modify being shown*/
-.arrow{
+.arrow {
   font-size: 150%;
 }
 
-
-
 /* RIGHT SIDE OF PAGE DONE*/
 
-
-
 /* OTHER  */
-
 
 .popup-content {
   /* Overrides reactjs-popup defaults */
@@ -1010,29 +979,15 @@ button.delete {
   color: rgb(190, 190, 190);
 }
 
-
 /* Used to implent the stick of the left and right panels and the center headers*/
 .content {
   position: -webkit-sticky;
   position: sticky;
-  align-self:flex-start;
-  display:flex;
+  align-self: flex-start;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*DONT THINK WE NEED - to be discused with team*/
 /* RULESPECS */
